# neuro_calculus

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt  run_analysis_example.py
full_analysis_output/snapshots/20250529_182357/: snapshot_epoch_-1_step_-1_ts_1748568237.pt  snapshot_epoch_1_step_200_ts_1748568237.pt  snapshot_epoch_2_step_300_ts_1748568237.pt  snapshot_epoch_3_step_400_ts_1748568237.pt  snapshot_epoch_4_step_500_ts_1748568237.pt  snapshot_epoch_na_step_100_ts_1748568237.pt
src/neuro_change_tracker/: __init__.py
src/neuro_change_tracker/comparison/: __init__.py  comparer.py
src/neuro_change_tracker/core/: __init__.py  snapshot.py  tracker.py
src/neuro_change_tracker/visualization/: __init__.py  plotter.py
